src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ActivelyBeingSequenced__c</fullName>
        <label>Actively Being Sequenced</label>
        <description>Is the contact currently in an Outreach sequence?</description>
        <type>Checkbox</type>
        <defaultValue>false</defaultValue>
    </fields>
    <fields>
        <fullName>CurrentSequenceUserSFDCID__c</fullName>
        <label>Current Sequence User SFDC ID</label>
        <description>The user sfdc id of the current Outreach sequence</description>
        <type>Lookup</type>
        <referenceTo>User</referenceTo>
        <relationshipName>SequenceContactUser</relationshipName>
    </fields>
    <fields>
        <fullName>CurrentSequenceStepNumber__c</fullName>
        <label>Current Sequence Step Number</label>
        <description>The step number of the current Outreach sequence</description>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>NumberofActiveSequences__c</fullName>
        <label>Number of Active Sequences</label>
        <description>The sequences of the number Outreach of</description>
        <type>Number</type>
        <precision>18</precision>
        <scale>0</scale>
    </fields>
    <fields>
        <fullName>CurrentSequenceName__c</fullName>
        <label>Current Sequence Name</label>
        <description>The name of the current Outreach sequence</description>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>CurrentSequenceStatus__c</fullName>
        <label>Current Sequence Status</label>
        <description>The status of the current Outreach sequence</description>
        <type>Text</type>
        <length>255</length>
    </fields>
    <fields>
        <fullName>CurrentSequenceStepType__c</fullName>
        <description>The step type of the current Outreach sequence</description>
        <label>The step type of the current Outreach sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AutoEmail</fullName>
                    <label>Auto Email</label>
                </value>
                <value>
                    <fullName>ManualEmail</fullName>
                    <label>Manual Email</label>
                </value>
                <value>
                    <fullName>PhoneCall</fullName>
                    <label>Phone Call</label>
                </value>
                <value>
                    <fullName>Generic Task</fullName>
                    <label>GenericTask</label>
                </value>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>